# parallel-canny-edge-detector

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix
src/: CMakeLists.txt  canny.cpp  canny.cu  main.cpp  main.cu
src/include/: canny.h
tests/: cuda.py  omp.py  serial.py
